Gjør om kalkulator til å bruke Beløp (#4632)
* Gjør om kalkulator til å bruke Beløp

* KonfigTjeneste tilbyr statics

* Legg til getBeløp i BeløpDto